--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -2,15 +2,19 @@
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
     <servlet>
         <servlet-name>CriarProfessorServlet</servlet-name>
-        <servlet-class>enterprise.web_jpa_war.servlet.CriarProfessorServlet</servlet-class>
+        <servlet-class>servlet.CriarProfessorServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>CriarAlunoServlet</servlet-name>
-        <servlet-class>enterprise.web_jpa_war.servlet.CriarAlunoServlet</servlet-class>
+        <servlet-class>servlet.CriarAlunoServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>EditarProfessorServlet</servlet-name>
-        <servlet-class>enterprise.web_jpa_war.servlet.EditarProfessorServlet</servlet-class>
+        <servlet-class>servlet.EditarProfessorServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ExcluirProfessorServlet</servlet-name>
+        <servlet-class>servlet.ExcluirProfessorServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>CriarProfessorServlet</servlet-name>
@@ -23,6 +27,10 @@
     <servlet-mapping>
         <servlet-name>EditarProfessorServlet</servlet-name>
         <url-pattern>/EditarProfessorServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ExcluirProfessorServlet</servlet-name>
+        <url-pattern>/ExcluirProfessorServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
